--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,7 @@ img {
   line-height: 1.25rem;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-family: "Libre Baskerville", "Times New Roman", serif;
@@ -212,6 +213,7 @@ img {
   color: #a59888;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -222,3 +224,4 @@ img {
   font-size: 13px;
   color: #a37230;
 }
+
